--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("src/assets/styles/fontiran.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +8,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: IRANSans;
+  font-weight: 300;
 }
